Revisada la gramática del State or the Art

--- a/0_resumen.tex
+++ b/0_resumen.tex
@@ -46,7 +46,7 @@ Author's name: & Jesús González Leal\\
 \hline
 Collaborating teacher's name: & Jordi de la Torre Gallart\\
 \hline
-PRA's name: & Laura Subirats\\
+PRA's name: & Laura Subirats Maté\\
 \hline
 Delivery date (mm/yyyy): & 02/2024\\
 \hline
