--- a/0_titulo.tex
+++ b/0_titulo.tex
@@ -39,7 +39,7 @@ Author: Jesús González Leal\
 
 Tutor: Jordi de la Torre Gallart\
 
-Professor: Laia Subirats\
+Professor: Laia Subirats Maté\
 
 -----------------------------------------------------------------------------\
 
