--- a/main.tex
+++ b/main.tex
@@ -113,7 +113,7 @@ citecolor=blue,
 %%%%%%%%%%%%%%%%
 \addcontentsline{toc}{chapter}{Bibliography}
 %\bibliographystyle{plain} % Original style of template. 
-\bibliographystyle{plain}
+\bibliographystyle{unsrt}
 \bibliography{referencias}
 %\printbibliography
 
