--- a/referencias.bib
+++ b/referencias.bib
@@ -5,12 +5,16 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
+
+%% License
 @misc{cc_by_nc_license,
         key = {cc_by_nc license}, 
 	title = {{CC} {BY}-{NC} 4.0 Deed {\textbar} Attribution-{NonCommercial} 4.0 International {\textbar} Creative Commons},
 	url = {https://creativecommons.org/licenses/by-nc/4.0/},
 	urldate = {2023-10-10},
 }
+
+%% Acknowledgements
 @misc{isic_web,
         key = {International Skin Imaging Collaboration},
 	title = {{ISIC} {\textbar} International Skin Imaging Collaboration},
@@ -21,6 +25,8 @@
 	langid = {english},
 	keywords = {{ISIC}},
 }
+
+%% Introduction
 
 @misc{luciaclemares_que_2023,
 	title = {¿Qué beneficios tiene la Inteligencia Artificial en la medicina?},
@@ -33,6 +39,8 @@
 	langid = {spanish},
 	keywords = {Motivation},
 }
+
+%% State of the ART
 
 @misc{apd_aplicaciones_IA_Medicina,
         key = {aplicaciones reales IA en medicina},
@@ -421,6 +429,7 @@ url={https://api.semanticscholar.org/CorpusID:206741597} }
 	author = {Chen, Leiyu and Li, Shaobo and Bai, Qiang and Yang, Jing and Jiang, Sanlong and Miao, Yanming},
 	date = {2021-11},
 	keywords = {State of Art, {TFM}},
+    year = 2021
 }
 
 @article{shorten_survey_2019,
