--- a/referencias.bib
+++ b/referencias.bib
@@ -86,7 +86,7 @@
 	abstract = {Deep learning simulates our brain, helping systems learn to identify objects and perform complex tasks with increasing accuracy without human intervention.},
 	urldate = {2023-10-21},
 	langid = {english},
-	keywords = {State of Art, {TFM}},
+	keywords = {State of Art, TFM},
 }
 
 @online{noauthor_what_nodate-1,
@@ -96,7 +96,7 @@
 	abstract = {Learn how convolutional neural networks use three-dimensional data to for image classification and object recognition tasks.},
 	urldate = {2023-10-21},
 	langid = {english},
-	keywords = {State of Art, {TFM}},
+	keywords = {State of Art, TFM},
 }
 
 @article{wells_medical_1998,
@@ -109,7 +109,8 @@
 	journaltitle = {{INTERNATIONAL} {JOURNAL} {OF} {RADIATION} {ONCOLOGY} {BIOLOGY} {PHYSICS}},
 	author = {Wells, {DM} and Niederer, J},
 	date = {1998-04-01},
-	keywords = {State of Art, {TFM}},
+    year = {1998},
+	keywords = {State of Art, TFM},
 }
 
 @inproceedings{lee_machine_2009,
@@ -121,9 +122,9 @@
 	booktitle = {{INTEGRATION} {OF} {AI} {AND} {OR} {TECHNIQUES} {IN} {CONSTRAINT} {PROGRAMMING} {FOR} {COMBINATORIAL} {OPTIMIZATION} {PROBLEMS}, {PROCEEDINGS}},
 	author = {Lee, Kva K.},
 	editor = {{VanHoeve}, {WJ} and Hooker, {JN}},
-	date = {2009},
+	year = {2009},
 	note = {{ISSN}: 0302-9743},
-	keywords = {State of Art, {TFM}},
+	keywords = {State of Art, TFM},
 }
 
 @article{garnavi_computer-aided_2012,
@@ -136,7 +137,8 @@
 	journaltitle = {{IEEE} {TRANSACTIONS} {ON} {INFORMATION} {TECHNOLOGY} {IN} {BIOMEDICINE}},
 	author = {Garnavi, Rahil and Aldeen, Mohammad and Bailey, James},
 	date = {2012-11},
-	keywords = {State of Art, {TFM}},
+    year= {2012},
+	keywords = {State of Art, TFM},
 }
 
 @article{dreiseitl_comparison_2001,
@@ -149,7 +151,8 @@
 	journaltitle = {{JOURNAL} {OF} {BIOMEDICAL} {INFORMATICS}},
 	author = {Dreiseitl, S and Ohno-Machado, L and Kittler, H and Vinterbo, S and Billhardt, H and Binder, M},
 	date = {2001-02},
-	keywords = {State of Art, {TFM}},
+    year = {2001},
+	keywords = {State of Art, TFM},
 }
 
 @inproceedings{dreiseitl_classifying_2000,
@@ -161,9 +164,9 @@
 	publisher = {Artificial Neural Networks Med \& Biol; Fdn Knowledge \& Competence Dev},
 	author = {Dreiseitl, S and Kittler, H and Ganster, H and Binder, M},
 	editor = {Malmgren, H and Borga, M and Niklasson, L},
-	date = {2000},
+	year = {2000},
 	note = {{ISSN}: 1431-6854},
-	keywords = {State of Art, {TFM}},
+	keywords = {State of Art, TFM},
 }
 
 @article{celebi_automated_2014,
@@ -176,7 +179,8 @@
 	journaltitle = {{IEEE} {SYSTEMS} {JOURNAL}},
 	author = {Celebi, M. Emre and Zornberg, Azaria},
 	date = {2014-09},
-	keywords = {State of Art, {TFM}},
+    year= {2014},
+	keywords = {State of Art, TFM},
 }
 
 @article{beuscart_expert_1997,
@@ -187,8 +191,8 @@
 	number = {2},
 	journaltitle = {{MEDECINE} {NUCLEAIRE}},
 	author = {Beuscart, R and Wartski, M and Bourguignon, {MH} and Foucher, C},
-	date = {1997},
-	keywords = {State of Art, {TFM}},
+	year = {1997},
+	keywords = {State of Art, TFM},
 }
 
 @article{abbas_melanoma_2013,
@@ -201,7 +205,8 @@
 	journaltitle = {{SKIN} {RESEARCH} {AND} {TECHNOLOGY}},
 	author = {Abbas, Qaisar and Celebi, M. Emre and Fondon Garcia, Irene and Ahmad, Waqar},
 	date = {2013-02},
-	keywords = {State of Art, {TFM}},
+    year= {2013},
+	keywords = {State of Art, TFM},
 }
 
 @misc{le_building_2012,
@@ -213,18 +218,19 @@
 	author = {Le, Quoc V. and Ranzato, Marc'Aurelio and Monga, Rajat and Devin, Matthieu and Chen, Kai and Corrado, Greg S. and Dean, Jeff and Ng, Andrew Y.},
 	urldate = {2023-10-22},
 	date = {2012-07-12},
+    year= {2012},
 	eprinttype = {arxiv},
 	eprint = {1112.6209 [cs]},
 	keywords = {Computer Science - Machine Learning},
 }
 
 @article{Le2011BuildingHF, 
-title={Building high-level features using large scale unsupervised learning}, 
-author={Quoc V. Le and Marc'Aurelio Ranzato and Rajat Monga and Matthieu Devin and Gregory S. Corrado and Kai Chen and Jeffrey Dean and A. Ng}, 
-journal={2013 IEEE International Conference on Acoustics, Speech and Signal Processing}, 
-year={2011}, 
-pages={8595-8598}, 
-url={https://api.semanticscholar.org/CorpusID:206741597} }
+    title={Building high-level features using large scale unsupervised learning}, 
+    author={Quoc V. Le and Marc'Aurelio Ranzato and Rajat Monga and Matthieu Devin and Gregory S. Corrado and Kai Chen and Jeffrey Dean and A. Ng}, 
+    journal={2013 IEEE International Conference on Acoustics, Speech and Signal Processing}, 
+    year={2011}, 
+    pages={8595-8598}, 
+    url={https://api.semanticscholar.org/CorpusID:206741597} }
 
 @ARTICLE{7792699,
   author={Yu, Lequan and Chen, Hao and Dou, Qi and Qin, Jing and Heng, Pheng-Ann},
@@ -243,8 +249,8 @@ url={https://api.semanticscholar.org/CorpusID:206741597} }
 	doi = {10.1109/JTEHM.2015.2419612},
 	journaltitle = {{IEEE} {JOURNAL} {OF} {TRANSLATIONAL} {ENGINEERING} {IN} {HEALTH} {AND} {MEDICINE}},
 	author = {Abuzaghleh, Omar and Barkana, Buket D. and Faezipour, Miad},
-	date = {2015},
-	keywords = {State of Art, {TFM}},
+	year = {2015},
+	keywords = {State of Art, TFM},
 }
 
 
@@ -254,12 +260,14 @@ url={https://api.semanticscholar.org/CorpusID:206741597} }
 	volume = {40},
 	issn = {0765-0019},
 	doi = {10.18280/ts.400330},
+    journal = {Traitement du Signal},
 	pages = {1145--1152},
 	number = {3},
 	journaltitle = {{TRAITEMENT} {DU} {SIGNAL}},
 	author = {Thamizhamuthu, Rajamanickam and Maniraj, Subramanian Pitchiah},
 	date = {2023-06},
-	keywords = {State of Art, {TFM}},
+    year = {2023},
+	keywords = {State of Art, TFM},
 }
 
 
@@ -274,8 +282,8 @@ url={https://api.semanticscholar.org/CorpusID:206741597} }
 	number = {1},
 	journaltitle = {Artificial Intelligence in Medicine},
 	author = {Chan, Samuel W. K. and Leung, K. S. and Wong, W. S. Felix},
-	date = {1996},
-	keywords = {Cervical cancer, Expert system, Knowledge-based image analysis, Medical diagnosis, State of Art, {TFM}},
+	year = {1996},
+	keywords = {Cervical cancer, Expert system, Knowledge-based image analysis, Medical diagnosis, State of Art, TFM},
 }
 
 @article{rodrigues_new_2020,
@@ -287,7 +295,8 @@ url={https://api.semanticscholar.org/CorpusID:206741597} }
 	journaltitle = {{PATTERN} {RECOGNITION} {LETTERS}},
 	author = {Rodrigues, Douglas de A. and Ivo, Roberto F. and Satapathy, Suresh Chandra and Wang, Shuihua and Hemanth, Jude and Reboucas Filho, Pedro P.},
 	date = {2020-08},
-	keywords = {State of Art, {TFM}, Transfer learning},
+    year= {2020},
+	keywords = {State of Art, TFM, Transfer learning},
 }
 
 @inproceedings{wall_deep_2020,
@@ -300,8 +309,8 @@ url={https://api.semanticscholar.org/CorpusID:206741597} }
 	publisher = {Fern Univ; {TH} Koln Univ Appl Sci; Univ Technol Sydney; {SW} Jiaotong Univ; Shunde Polytechn; Minnan Normal Univ; Natl Assoc Non Class Log \& Computat China},
 	author = {Wall, Conor and Young, Fraser and Zhang, Li and Phillips, Emma-Jane and Jiang, Richard and Yu, Yonghong},
 	editor = {Li, Z and Yuan, C and Lu, J and Kerre, {EE}},
-	date = {2020},
-	keywords = {State of Art, {TFM}, Transfer learning},
+	year = {2020},
+	keywords = {State of Art, TFM, Transfer learning},
 }
 
 @inproceedings{abbes_deep_2021,
@@ -314,9 +323,9 @@ url={https://api.semanticscholar.org/CorpusID:206741597} }
 	publisher = {{KES} Int},
 	author = {Abbes, Wiem and Sellami, Dorra},
 	editor = {Watrobski, J and Salabun, W and Toro, C and Zanni-Merk, C and Howlett, {RJ} and Jain, {LC}},
-	date = {2021},
+    year = {2021},
 	note = {{ISSN}: 1877-0509},
-	keywords = {State of Art, {TFM}, Transfer learning},
+	keywords = {State of Art, TFM, Transfer learning},
 }
 
 @inproceedings{georgakopoulos_detection_2017,
@@ -329,9 +338,9 @@ url={https://api.semanticscholar.org/CorpusID:206741597} }
 	booktitle = {{ENGINEERING} {APPLICATIONS} {OF} {NEURAL} {NETWORKS}, {EANN} 2017},
 	author = {Georgakopoulos, V, S. and Kottari, K. and Delibasis, K. and Plagianakos, V. P. and Maglogiannis, I},
 	editor = {Boracchi, G and Iliadis, L and Jayne, C and Likas, A},
-	date = {2017},
+    year = {2017},
 	note = {{ISSN}: 1865-0929},
-	keywords = {State of Art, {TFM}, Transfer learning},
+	keywords = {State of Art, TFM, Transfer learning},
 }
 
 @article{talavera-martinez_hair_2021,
@@ -342,8 +351,8 @@ url={https://api.semanticscholar.org/CorpusID:206741597} }
 	pages = {2694--2704},
 	journaltitle = {{IEEE} {ACCESS}},
 	author = {Talavera-Martinez, Lidia and Bibiloni, Pedro and Gonzalez-Hidalgo, Manuel},
-	date = {2021},
-	keywords = {State of Art, {TFM}, hair filter},
+	year = {2021},
+	keywords = {State of Art, TFM, hair filter},
 }
 
 @article{bardou_hair_2022,
@@ -356,7 +365,8 @@ url={https://api.semanticscholar.org/CorpusID:206741597} }
 	journaltitle = {{SKIN} {RESEARCH} {AND} {TECHNOLOGY}},
 	author = {Bardou, Dalal and Bouaziz, Hamida and Lv, Laishui and Zhang, Ting},
 	date = {2022-05},
-	keywords = {State of Art, {TFM}, hair filter},
+    year= {2022},
+	keywords = {State of Art, TFM, hair filter},
 }
 
 @article{kaur_hairlines_2022,
@@ -367,7 +377,8 @@ url={https://api.semanticscholar.org/CorpusID:206741597} }
 	journaltitle = {{BIOMEDICAL} {SIGNAL} {PROCESSING} {AND} {CONTROL}},
 	author = {Kaur, Ranpreet and {GholamHosseini}, Hamid and Sinha, Roopak},
 	date = {2022-07},
-	keywords = {State of Art, {TFM}, hair filter},
+    year= {2022},
+	keywords = {State of Art, TFM, hair filter},
 }
 
 @misc{roy_effects_2023,
@@ -379,9 +390,10 @@ url={https://api.semanticscholar.org/CorpusID:206741597} }
 	author = {Roy, Prasun and Ghosh, Subhankar and Bhattacharya, Saumik and Pal, Umapada},
 	urldate = {2023-10-23},
 	date = {2023-03-29},
+    year= {2023},
 	eprinttype = {arxiv},
 	eprint = {1807.10108 [cs, eess]},
-	keywords = {Computer Science - Computer Vision and Pattern Recognition, Electrical Engineering and Systems Science - Image and Video Processing, State of Art, {TFM}},
+	keywords = {Computer Science - Computer Vision and Pattern Recognition, Electrical Engineering and Systems Science - Image and Video Processing, State of Art, TFM},
 }
 
 @misc{laina_deeper_2016,
@@ -393,10 +405,11 @@ url={https://api.semanticscholar.org/CorpusID:206741597} }
 	author = {Laina, Iro and Rupprecht, Christian and Belagiannis, Vasileios and Tombari, Federico and Navab, Nassir},
 	urldate = {2023-10-23},
 	date = {2016-09-19},
+    year= {2016},
 	eprinttype = {arxiv},
 	eprint = {1606.00373 [cs]},
 	note = {version: 2},
-	keywords = {Computer Science - Computer Vision and Pattern Recognition, State of Art, {TFM}},
+	keywords = {Computer Science - Computer Vision and Pattern Recognition, State of Art, TFM},
 }
 
 @online{wong_what_2021,
@@ -407,6 +420,7 @@ url={https://api.semanticscholar.org/CorpusID:206741597} }
 	author = {Wong, Wanshun},
 	urldate = {2023-10-23},
 	date = {2021-12-18},
+        year= {2021},
 	langid = {english},
 	keywords = {State of Art},
 }
@@ -414,10 +428,12 @@ url={https://api.semanticscholar.org/CorpusID:206741597} }
 
 @article{shiri_comprehensive_nodate,
 	title = {A Comprehensive Overview and Comparative Analysis on Deep Learning Models: {CNN}, {RNN}, {LSTM}, {GRU}},
-	abstract = {Deep learning ({DL}) has emerged as a powerful subset of machine learning ({ML}) and artificial intelligence ({AI}), outperforming traditional {ML} methods, especially in handling unstructured and large datasets. Its impact spans across various domains, including speech recognition, healthcare, autonomous vehicles, cybersecurity, predictive analytics, and more. However, the complexity and dynamic nature of real-world problems present challenges in designing effective deep learning models. Consequently, several deep learning models have been developed to address different problems and applications. In this article, we conduct a comprehensive survey of various deep learning models, including Convolutional Neural Networks ({CNNs}), Recurrent Neural Networks ({RNNs}), Generative Models, Deep Reinforcement Learning ({DRL}), and Deep Transfer Learning. We examine the structure, applications, benefits, and limitations of each model. Furthermore, we perform an analysis using three publicly available datasets: {IMDB}, {ARAS}, and Fruit-360. We compare the performance of six renowned deep learning models: {CNN}, Simple {RNN}, Long Short-Term Memory ({LSTM}), Bidirectional {LSTM}, Gated Recurrent Unit ({GRU}), and Bidirectional {GRU}.},
+	abstract = {Deep learning ({DL}) has emerged as a powerful subset of machine learning ({ML}) and artificial intelligence ({AI}), outperforming traditional {ML} methods, especially in handling unstructured and large datasets. Its impact spans across various domains, including speech recognition, healthcare, autonomous vehicles, cybersecurity, predictive analytics, and more. However, the complexity and dynamic nature of real-world problems present challenges in designing effective deep-learning models. Consequently, several deep learning models have been developed to address different problems and applications. In this article, we conduct a comprehensive survey of various deep learning models, including Convolutional Neural Networks ({CNNs}), Recurrent Neural Networks ({RNNs}), Generative Models, Deep Reinforcement Learning ({DRL}), and Deep Transfer Learning. We examine the structure, applications, benefits, and limitations of each model. Furthermore, we perform an analysis using three publicly available datasets: {IMDB}, {ARAS}, and Fruit-360. We compare the performance of six renowned deep learning models: {CNN}, Simple {RNN}, Long Short-Term Memory ({LSTM}), Bidirectional {LSTM}, Gated Recurrent Unit ({GRU}), and Bidirectional {GRU}.},
 	author = {Shiri, Farhad Mortezapour and Perumal, Thinagaran and Mustapha, Norwati and Mohamed, Raihani},
+    doi = {10.48550/arXiv.2305.17473},
+    year = {2023},
 	langid = {english},
-	keywords = {State of Art, {TFM}},
+	keywords = {State of Art, TFM},
 }
 
 @article{chen_review_2021,
@@ -425,11 +441,11 @@ url={https://api.semanticscholar.org/CorpusID:206741597} }
 	volume = {13},
 	doi = {10.3390/rs13224712},
 	number = {22},
-	journaltitle = {{REMOTE} {SENSING}},
+	journaltitle = {Remote sensing},
 	author = {Chen, Leiyu and Li, Shaobo and Bai, Qiang and Yang, Jing and Jiang, Sanlong and Miao, Yanming},
 	date = {2021-11},
-	keywords = {State of Art, {TFM}},
-    year = 2021
+	keywords = {State of Art, TFM},
+    year = {2021}
 }
 
 @article{shorten_survey_2019,
@@ -437,8 +453,50 @@ url={https://api.semanticscholar.org/CorpusID:206741597} }
 	volume = {6},
 	doi = {10.1186/s40537-019-0197-0},
 	number = {1},
-	journaltitle = {{JOURNAL} {OF} {BIG} {DATA}},
+	journaltitle = {Journal of big data},
 	author = {Shorten, Connor and Khoshgoftaar, Taghi M.},
 	date = {2019-07-06},
-	keywords = {State of Art, {TFM}, data augmentation},
+    year= {2019},
+	keywords = {State of Art, TFM, data augmentation},
+}
+
+%% Design and implementation
+@misc{dataset_ref_1,
+    author = {Tschandl P. and Rosendahl C.  and Kittler H.},
+    title = {The HAM10000 dataset, a large collection of multi-source dermatoscopic images of common pigmented skin lesions},
+    note = {Sci. Data 5, 180161 doi.10.1038/sdata.2018.161 (2018)},
+    url = {https://challenge.isic-archive.com/data/#2019},
+    year= {2018},
+}
+
+@misc{dataset_ref_2,
+    author = {Noel C. F. Codella and David Gutman and M. Emre Celebi and Brian Helba and Michael A. Marchetti and Stephen W. Dusza and Aadi Kalloo and Konstantinos Liopyris and Nabin Mishra and Harald Kittler and Allan Halpern},
+    title = {Skin Lesion Analysis Toward Melanoma Detection: A Challenge at the 2017 International Symposium on Biomedical Imaging (ISBI), Hosted by the International Skin Imaging Collaboration (ISIC)},
+    note = {arXiv:1710.05006},
+    year = {2017},
+    url = {https://challenge.isic-archive.com/data/#2019}
+}
+
+@misc{dataset_ref_3,
+    author = {Marc Combalia  and Noel C. F. Codella  and Veronica Rotemberg and Brian Helba and Veronica Vilaplana and Ofer Reiter and Allan C. Halpern and Susana Puig and Josep Malvehy},
+    title = {BCN20000: Dermoscopic Lesions in the Wild},
+    note = {arXiv:1908.02288},
+    year = {2019},
+    url = {https://challenge.isic-archive.com/data/#2019}
+}
+
+@misc{optimizers1,
+    author = {Luis Velasco},
+    title = {Optimizadores en redes neuronales profundas: un enfoque práctico},
+    note = {Medium},
+    year = {2020},
+    url = {https://velascoluis.medium.com/optimizadores-en-redes-neuronales-profundas-un-enfoque-pr%C3%A1ctico-819b39a3eb5}
+}
+
+@misc{SGDwithMomentum,
+    author = {Vitaly Bushaev},
+    title = {Stochastic Gradient Descent with momentum},
+    note = {Medium},
+    year = {2017},
+    url = {https://towardsdatascience.com/stochastic-gradient-descent-with-momentum-a84097641a5d}
 }
